# simple-json-parser

./: CMakeLists.txt  README.md  meson.build
include/: json.hpp  parser.hpp  tokenizer.hpp
src/: main.cpp  parser.cpp  tokenizer.cpp
test/: parser_test.cpp
